cosinnus/static/less/buttons.less
/* ... */
.app-main {
	.btn-app-colors(@app-main-color-light,@app-main-color,@app-main-color-dark);
}
.app-calendar {
    .btn-app-colors(@app-calendar-color-light,@app-calendar-color,@app-calendar-color-dark);
}
.app-cloud {
    .btn-app-colors(@app-cloud-color-light,@app-cloud-color,@app-cloud-color-dark);
}
.app-files {
	.btn-app-colors(@app-files-color-light,@app-files-color,@app-files-color-dark);
}
.app-documents {
	.btn-app-colors(@app-documents-color-light,@app-documents-color,@app-documents-color-dark);
}
.app-poll {
	.btn-app-colors(@app-poll-color-light,@app-poll-color,@app-poll-color-dark);
}
.app-marketplace {
    .btn-app-colors(@app-marketplace-color-light,@app-marketplace-color,@app-marketplace-color-dark);
}
.app-message {
    .btn-app-colors(@app-message-color-light,@app-message-color,@app-message-color-dark);
}
.app-todos {
	.btn-app-colors(@app-todos-color-light,@app-todos-color,@app-todos-color-dark);
}
.app-etherpad {
	.btn-app-colors(@app-etherpad-color-light,@app-etherpad-color,@app-etherpad-color-dark);
}
.app-main-force {
    .btn-app-colors(@app-main-color-light,@app-main-color,@app-main-color-dark);
}


// inside .media-body a small note on the right side.
.media-body {
	position: relative;
	white-space: nowrap;

	a.annotation, span.annotation {
		width: auto;
		float: right;
		font-size: 11px;
//		margin-bottom: -15px;
	}
	div.annotation {
		color: @app-neutral-color;
		text-align: right;
		font-size: 11px;
	}

	// Always make a gap between links
	a + a {
		margin-left: 7px;
	}
	// But not in text
	p a + a {
		margin-left: 0;
	}
	// And not at beginning of line
	a.pull-right + a,
    span.pull-right + span {
		margin-left: 0;
	}
	a.pull-right + a.pull-right,
	span.pull-right + span.pull-right {
		margin-right: 7px;
	}


	> a, > span {
		white-space: nowrap;
		width: 100%;

		overflow: hidden;
		text-overflow: ellipsis;
		-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
		-moz-box-sizing: border-box;    /* Firefox, other Gecko */
		box-sizing: border-box;         /* Opera/IE 8+ */
	}

	&.media-body-normalwrap {
		white-space: normal;
	}
}

// inside .media-body a paragraph.
.media-body p {
	line-height: 1.2em;
	white-space: normal;
	padding: 0;
	user-select: text;
	-moz-user-select: text;
	-webkit-user-select: text;
	-ms-user-select: text;
	-o-user-select: text;


	&.meta-attribute {
		// meta tags
		font-size: 12px;
		line-height: 17px;
	}
}

.btn.user-list-button {
	.media-body.username-body {
		span, a {
			display: inline-block;
		}
		.username-name {
			min-width: 40%;
			max-width: 40%;
		}
		.username-extra {
			opacity: 0.75;
			width: auto;
			&, span {
				padding-left: 10px;
			}
		}
		a.annotation, span.annotation {
			width: auto;
		}
	}
}

// .form-control is a Bootstrap class for INPUT elements.
// Center some placeholders but align the content left.
.btn-emphasized .form-control, .btn-extra-emphasized .form-control {
	color: @app-neutral-color-white;
}

.btn-emphasized-strong {
  width: 100%;
  background-color: #097891;
  border-radius: 0;
  color: white;
  padding: 0;
  border-width: 0;
  
  	.media-body {
	  padding-top: 8px;
	  padding-right: 5px;
	  text-transform: uppercase;
	  font-weight: bold;
	  line-height: 23px;
	}
}

// ### magic for mouse cursor

// There are no clickable icons on left side.
a.pull-left {
	cursor: default;
}
.content-box .btn:not(a) {
	cursor: default;


}
.content-box button.btn {
	// Seems to be a real button
	cursor: pointer;
}

/* Square icon with date. Something like:
	<a class="pull-left square-date-icon" href="#">
		<div>19</div>
		<div>Dez</div>
	</a> */
.square-date-icon {
	div {
		line-height: 26px;
		font-size: 17px;
	}
	div + div {
		line-height: 6px;
		font-size: 12px;
	}
}

.btn.button-with-title-image:hover {
    color: @app-neutral-color-white;
}
.button-with-title-image {
	position: relative;
	color: @app-neutral-color-white;
	

	> img {
		width: 100%;
		min-height: 70px;
	}

	> img + div {
background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,0) 57%, rgba(0,0,0,0.6) 100%); /* FF3.6+ */
background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(57%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0.6))); /* Chrome,Safari4+ */
background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0) 57%,rgba(0,0,0,0.6) 100%); /* Chrome10+,Safari5.1+ */
background: -o-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0) 57%,rgba(0,0,0,0.6) 100%); /* Opera 11.10+ */
background: -ms-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0) 57%,rgba(0,0,0,0.6) 100%); /* IE10+ */
background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0) 57%,rgba(0,0,0,0.6) 100%); /* W3C */
filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#57000000',GradientType=0 ); /* IE6-9 */


	width: 100%;
	height: 100%;
	position: absolute;
	top: 0;
	left: 0;
	}

	> ul.media-list {
		position: absolute;
		bottom: 0px;
		left: 0;
		width: 100%;
		> li.media {
			background-color: transparent;
			> a.pull-right,
			> span.pull-right {
				background-color: transparent;
			}
			> div.media-body {
				background-color: transparent;
			}
		}
	}


} // .button-with-title-image


// Nice white button. Why not!
.btn.btn-white {
	.media,
	.media > .media-body,
	.media > .media-body > p,
	.media > .pull-right,
	.media > .pull-left {
		background-color: white;
		color: @app-neutral-color-dark;
	}

	a {
		color: @app-neutral-color-dark;
	}
}
/* ... */

